--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,68 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
-jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
+# # Javascript Node CircleCI 2.0 configuration file
+# #
+# # Check https://circleci.com/docs/2.0/language-javascript/ for more details
+# #
+# version: 2
+# jobs:
+#   build:
+#     docker:
+#       # specify the version you desire here
+#       - image: circleci/node:7.10
       
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+#       # Specify service dependencies here if necessary
+#       # CircleCI maintains a library of pre-built images
+#       # documented at https://circleci.com/docs/2.0/circleci-images/
+#       # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/repo
+#     working_directory: ~/repo
 
-    steps:
-      - checkout
+#     steps:
+#       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+#       # Download and cache dependencies
+#       - restore_cache:
+#           keys:
+#           - v1-dependencies-{{ checksum "package.json" }}
+#           # fallback to using the latest cache if no exact match is found
+#           - v1-dependencies-
 
-      - run: yarn install
+#       - run: yarn install
 
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+#       - save_cache:
+#           paths:
+#             - node_modules
+#           key: v1-dependencies-{{ checksum "package.json" }}
         
-      # run tests!
-      - run: yarn test
+#       # run tests!
+#       - run: yarn test
 
+machine:
+  node:
+    version: 6.10.3
+
+# Need to install firebase-tools so that the deploy works
+dependencies:
+  pre:
+    - npm install -g firebase-tools
+
+# Need to tell Circle CI how to build the site
+compile:
+  override:
+    - bundle exec jekyll build --verbose
+
+# Circle CI expects some kind of testing to pass in order for the
+# build to be successful and deploy. Since you don't have tests
+# you can fake it by just returning true. http://gph.is/1MLPDWK
+test:
+  override:
+    - "true"
+
+# How you tell Circle to deploy to Firebase. The important thing to
+# note here is the FIREBASE_TOKEN env variable. See below.
+deployment:
+  production:
+    branch: master
+    commands:
+      - firebase deploy --token=$FIREBASE_TOKEN --non-interactive
 
 
