Fix Jekyll config

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: sumer.kohli@berkeley.edu
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
-# baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  firebolt55439
 
@@ -28,7 +28,7 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-keep_files: assets
+keep_files: [assets]
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
