--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,9 @@ workflows:
   build-deploy:
     jobs:
       - build
+          filters:
+            branches:
+              only: deploy
       - deploy:
           requires:
             - build
