--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,6 @@ version: 2 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     <<: *defaults
-    branches:
-      only:
-        - deploy
     docker: # run the steps with Docker
       - image: circleci/ruby:2.5
     environment:
@@ -36,27 +33,30 @@ jobs: # a collection of steps
             - node_modules
             - _site
   deploy:
-      <<: *defaults
-      docker:
-        - image: circleci/node:9.4.0
-      steps:
-        - attach_workspace:
-            at: ./
-        # - run:
-        #     name: Update NPM
-        #     command: 'sudo npm install -g npm@latest'
-        # - run:
-        #     name: Install Firebase Tools
-        #     command: 'sudo npm install -g firebase-tools'
-        - run:
-            name: Deploy Site
-            command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN --non-interactive
+    <<: *defaults
+    docker:
+      - image: circleci/node:9.4.0
+    steps:
+      - attach_workspace:
+          at: ./
+      # - run:
+      #     name: Update NPM
+      #     command: 'sudo npm install -g npm@latest'
+      # - run:
+      #     name: Install Firebase Tools
+      #     command: 'sudo npm install -g firebase-tools'
+      - run:
+          name: Deploy Site
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN --non-interactive
 
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build
+          filters:
+            branches:
+              only: deploy
       - deploy:
           requires:
             - build
