--- a/firebase.json
+++ b/firebase.json
@@ -21,7 +21,7 @@
         }]
       },{
         "source":
-          "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|eot|otf|ttf|ttc|woff)",
+          "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|eot|otf|ttf|ttc|woff|woff2)",
         "headers": [
           {
             "key": "Cache-Control",
